# assignment2-systems

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  test_and_make_submission.sh
cs336-basics/: pyproject.toml
cs336-basics/cs336_basics/: FlashAttention2.py  data.py  model.py  nn_utils.py  optimizer.py
cs336_systems/: __init__.py
tests/: adapters.py  common.py  conftest.py  test_attention.py  test_ddp.py  test_ddp_individual_parameters.py  test_sharded_optimizer.py
